@@ -1,3 +1,8 @@
+2005-12-15  Jack Morgenstein  <jackm@mellanox.co.il>
+
+	* src/cq.c (mthca_cq_clean): When cleaning up a CQ, we should free
+	an SRQ WQE if and only if the CQE is a receive.
+
 2005-12-15  Michael S. Tsirkin  <mst@mellanox.co.il>
 
 	* src/qp.c (mthca_store_qp): Don't increment qp_table ref count if
